Homepage text modification

--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -5,7 +5,7 @@
     <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
     <li><a href='https://webpack.github.io/'>Webpack</a> for building and bundling client-side resources</li>
     <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-    <li><a href='http://getbootstrap.com/'>Visual Studio tooling</a> for layout and styling</li>
+    <li><a href='http://getbootstrap.com/'>Visual Studio tooling</a> Community and Code editions.</li>
 </ul>
 <p>Full Stacks demo features here:</p>
 <ul>
