42 ways to improve things

--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -43,6 +43,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> products
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/customer']">
+                        <span class='glyphicon glyphicon-user'></span> customers
+                    </a>
+                </li>
 
             </ul>
         </div>
