Data Source Configuration - Before - Working OK

--- a/ClientApp/app/components/app/app.component.css
+++ b/ClientApp/app/components/app/app.component.css
@@ -3,4 +3,21 @@
     .body-content {
         padding-top: 50px;
     }
+
+
+    #simple{
+        width:100px;
+        height:100px;
+        background-color:orange;
+    }
+
+
+
+
+
+
+
+
+
+
 }
