--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -16,10 +16,10 @@
         Here you can see both working along with all the source code.
         This is not a another tutorial.
         <br />
-        Quite soon I hope to show here the daily parts played Azure, Github and VSTS along with how 
+        Quite soon I hope to show some of the parts  of the development process played by Azure, Github and VSTS along with how 
         developer branching, database migrations, testing all come together
-        to help keep things on track
- .
+        to help keep things on track. Hopefully not making too many mistakes of letting configuration details
+        get in the way of informing you.
     </li>
 
 
