--- a/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/ClientApp/app/components/navmenu/navmenu.component.html
@@ -44,10 +44,17 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/customer']">
+                    <a [routerLink]="['/customers']">
                         <span class='glyphicon glyphicon-user'></span> customers
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/project']">
+                        <span class='glyphicon glyphicon-user'></span> projects
+                    </a>
+                </li>
+
+
 
             </ul>
         </div>
