--- a/ClientApp/app/components/customers/customers-grid.component.html
+++ b/ClientApp/app/components/customers/customers-grid.component.html
@@ -5,18 +5,21 @@
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
+
                             <th>&nbsp;</th>
-                            <th (click)="sort('firstName')">First Name</th>
-                            <th (click)="sort('lastName')">Last Name</th>
-                            <th (click)="sort('address')">Address</th>
-                            <th (click)="sort('city')">City</th>
-                            <th (click)="sort('state.name')">State</th>
-                            <th (click)="sort('orderTotal')">Order Total</th>
+                            <th>: First Name</th>
+                            <th>Last Name</th>
+                            <th>Address</th>
+                            <th>City</th>
+                            <th>State</th>
+                            <th>Order Total</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let customer of customers;trackBy:trackby.customer">
+                        <tr *ngFor="let customer of customers">
                             <td>
+
+
 
                                 <img src="/images/{{ customer.gender | lowercase }}.png"
                                      class="card-image" alt="Customer Image" />
