--- a/ClientApp/app/components/product/product-list.component.html
+++ b/ClientApp/app/components/product/product-list.component.html
@@ -33,14 +33,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor='let product of products'>
+                    <tr *ngFor='let product of products | productFilter: listFilter'
+                        >
+                    <!--<tr *ngFor='let product of products'>-->
                         <td>
-                        <img *ngIf='showImage'
-                             [src]='product.imageUrl' 
-                             [title]='product.productName'
-                             [style.width.px]='imageWidth'
-                             [style.margin.px]='imageMargin'
-                             />
+                            <img *ngIf='showImage'
+                                 [src]='product.imageUrl'
+                                 [title]='product.productName'
+                                 [style.width.px]='imageWidth'
+                                 [style.margin.px]='imageMargin' />
                         </td>
                         <td>
                             <a [routerLink]="['ProductDetail', {id: product.productId}]">
@@ -50,9 +51,11 @@
                         <td>{{ product.productCode | lowercase }}</td>
                         <td>{{ product.releaseDate }}</td>
                         <td>{{ product.price | currency : 'EUR': true}}</td>
-                        <td>
-                           <div  (click)='GotoDetail()'
-                                style="width:50px; height:18px; background-color:brown"></div>
+                        <td><ai-star [rating]='product.starRating'
+                                     (ratingClicked)='onRatingClicked($event)'>
+                            </ai-star>
+                            <!--<div (click)='GotoDetail()'
+                                 style="width:50px; height:18px; background-color:cyan"></div>-->
                         </td>
                     </tr>
                 </tbody>
